<resources>
    <string name="app_name">Weight Log</string>
    <string name="weight_note_hint">Note</string>
    <string name="weight_title_label">Weight</string>
    <string name="date_button_text">Date</string>
    <string name="time_button_text">Time</string>
    <string name="weight_button_text">Weight</string>
    <string name="weight_units_kg">kg</string>
    <string name="date_picker_title">Taken on:</string>
    <string name="new_weight">New</string>
    <string name="weight_picker_title">Set weight</string>
    <string name="time_picker_title">Time</string>
    <string name="delete_weight">Delete</string>
    <string name="accept_changes">Accept</string>
    <string name="confirm_delete_title">Delete entry</string>
    <string name="confirm_delete_text">The following entry will be removed:</string>
    <string name="confirm_delete_question">Proceed?</string>
    <string name="cancel">Cancel</string>

    <!-- preferences -->
    <string name="settings">Settings</string>

    <string name="assessment_pref_category_key">assessment_pref_category_key</string>
    <string name="assessment_pref_title">Assessment</string>

    <string name="bmi_pref_key">bmi_pref_key</string>
    <string name="bmi_pref_title">Body Mass Index (BMI)</string>
    <string name="bmi_pref_summary">Requires: Height</string>

    <string name="height_pref_key">height_pref_key</string>
    <string name="height_pref_title">Height</string>

    <string name="height_pref_set">Set</string>
    <string name="height_pref_cancel">Cancel</string>
    <string name="not_set">Not set</string>
    <string name="unit_centimeters_short">cm</string>

    <!-- assessment -->
    <string name="bmi_label">BMI:</string>
    <string name="healthy_weight">healthy weight</string>
    <string name="underweight">underweight</string>
    <string name="severely_underweight">severely underweight</string>
    <string name="very_severely_underweight">very severely underweight</string>
    <string name="overweight">overweight</string>
    <string name="moderately_obese">moderately obese</string>
    <string name="severely_obese">severely obese</string>
    <string name="very_severely_obese">very severely obese</string>
    <string name="edit_weight">Edit</string>
    <string name="change_from_last">Change from last:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_time">0:00 am</string>
    <string name="dummy_date">00/00/0000</string>
    <string name="dummy_weight">00.0 kg</string>

</resources>
