<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/assessment_pref_category_key"
        android:title="@string/assessment_pref_title"
        android:persistent="true"
        >
        <SwitchPreference
            android:key="@string/bmi_pref_key"
            android:title="@string/bmi_pref_title"
            android:summary="@string/bmi_pref_summary"
            android:defaultValue="false"
            android:persistent="true"
            />

        <Preference
            android:dependency="@string/bmi_pref_key"
            android:key="@string/height_pref_key"
            android:title="@string/height_pref_title"
            android:summary="@string/not_set"
            android:defaultValue="2200"
            android:persistent="true"
        />
    </PreferenceCategory>
</PreferenceScreen>
