<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_text"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        >
        <TextView
            android:id="@+id/dialog_confirm_delete_weight_weight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:text="@string/dummy_weight"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/dialog_confirm_delete_weight_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:text="@string/dummy_date"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/dialog_confirm_delete_weight_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dummy_time"
            android:textStyle="italic"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete_question"
        />
</LinearLayout>