<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_title_label"
        style="?android:listSeparatorTextViewStyle"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        >
        <Button
            android:id="@+id/weight_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            android:text="@string/date_button_text"
            style="@android:style/Widget.Holo.Spinner"
        />
        <Button
            android:id="@+id/weight_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="18sp"
            android:text="@string/time_button_text"
            style="@android:style/Widget.Holo.Spinner"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/weight_button"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="28sp"
            android:gravity="center"
            android:text="@string/weight_button_text"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_units_kg"
        />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/assessment_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi_label"
        />
        <TextView
            android:id="@+id/bmi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text=""
        />
    </LinearLayout>

    <EditText
        android:id="@+id/weight_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_note_hint"
        android:layout_margin="9dp"
        tools:ignore="TextFields"
    />
</LinearLayout>
